2003-02-02  Daniel Yacob  <locales@geez.org>

	* configure.in: Added Amharic (am) to ALL_LINGUAS

2003-01-29  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Dutch (nl) and Vietnamese (vi) to ALL_LINGUAS

2003-01-29  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2003-01-29  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2003-01-22  Paisa Seeluangsawat  <paisa@colorado.edu>

	* configure.in (ALL_LINGUAS): Added "th".

2003-01-19  Artis Trops  <hornet@navigator.lv>

        * configure.in: Added Latvian (lv) to ALL_LINGUAS.      

2003-01-15  James Henstridge  <james@daa.com.au>

	* src/font-view.c (set_icon): set the icon on the window based on
	the file type.

2003-01-13  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

	* configure.in (ALL_LINGUAS): Added "es" (Spanish).

2003-01-13  James Henstridge  <james@daa.com.au>

	* src/font-view.c (create_text_pixmap): refactor so that it
	creates a pixmap big enough to display everything.
	(main): make the window resizable, and add font preview to a
	scrolled window.

2003-01-12  Miloslav Trmac  <mitr@volny.cz>

	* configure.in (ALL_LINGUAS): Added "cs" (Czech).

2003-01-11  Kjartan Maraas  <kmaraas@gnome.org>

        * configure.in: (ALL_LINGUAS): Added "no".

2003-01-10  Kenneth Christiansen <kenneth@gnu.org>

        * configure.in: (ALL_LINGUAS): Added "da".

2003-01-10  Christian Rose  <menthos@menthos.com>

	* configure.in: (ALL_LINGUAS): Added "sv".

2003-01-09  Christian Neumair  <chris@gnome-de.org>

	* configure.in (ALL_LINGUAS): Added German (de).

2003-01-09  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* src/fontilus.mime: ttc files are True Types.

	* src/*.c: update copyright messages.

	* fontilus.spec.in: update to include schema and run a
	postinstallation script to install the schema.

	* configure.in: look for gconftool.
