@@ -8,5 +8,8 @@ Makefile.in
 .deps
 gnome-thumbnail-font
 gnome-font-viewer
+fontilus-context-menu
 font-method.directory
 fontilus.schemas
+fontilus.server
+fontilus.server.in
