@@ -1,3 +1,12 @@
+2003-02-02  James Henstridge  <james@daa.com.au>
+
+	* src/fontilus.server.in.in: bonobo activation server file for the
+	fontilus component.
+
+	* src/fontilus-context-menu.c: Bonobo listener component to
+	implement custom context menu items for fonts under fonts:///,
+	which allows us to set the default font for the desktop.
+
 2003-02-02  Daniel Yacob  <locales@geez.org>
 
 	* configure.in: Added Amharic (am) to ALL_LINGUAS
